# LittleLinuxProj

./: Makefile.am  README.md  calc.c  calc.h  configure.ac  main.c
