AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = calc
calc_SOURCES = main.c calc.c calc.h
CLEANFILES = calc
clean-all:
	rm -rf autom4te.cache
	rm aclocal.m4 configure compile depcomp install-sh missing Makefile.in 
	rm config.log config.status
	rm *.o calc
	rm calc-0.1.tar.gz
	rm -rf /usr/local/bin/ /usr/local/include/ .deps
	rm Makefile
